[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.0.4"
maplit = "1.0.2"
speculate = "0.1.2"
volt = { path = "../../volt-parser/volt-rs" }
volt-derive = { path = "../../volt-parser/volt-rs-derive" }
